# GH_Summariser

./: .gitignore  CLAUDE.md  NnamdiOdozi-GH_Summariser.txt  NnamdiOdozi-GH_Summariser_llm.json  NnamdiOdozi-batch_summary_doubleword.txt  NnamdiOdozi-batch_summary_doubleword_llm.json  NnamdiOdozi-mlx-digit-app.txt  NnamdiOdozi-mlx-digit-app_llm.json  README.md  chatgpt_response.md  chatgpt_response_triage  config.toml  doublewordai-batch-skill.txt  main.py  prompt.txt  pyproject.toml  scrap  settings.local.json  setup.sh  tmp.txt
api/: README.md  main.py
api/routes/: __init__,py  chat.py  gitdigest.py
app/: __init__.py  main.py  prompt.txt  triage.py
gitdigest_app/: __init__.py  main.py  models.py  prompt.txt
server_utils/: GH_summariser.service  setup.sh
