[project]
name = "nebius-git-summariser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyGithub>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi",
    "uvicorn",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "autobatcher",
]

[tool.setuptools.packages.find]
  where = ["."]
  include = ["gitdigest_app*", "api*"]

[project.scripts]                            
  gitdigest-pkg = "gitdigest_app.main:main"
  gitdigest-serve = "api.main:main" 
